# GeeGooAgent

./: .commit_msg.txt  .gitignore  PROGRESS.md  README.md  agent.env.example  config.example.json  config.production.example.json  go.mod  go.sum  pyproject.toml  start.sh
.github/workflows/: ci.yml
.obsidian/: workspace.json
deploy/: env.example  hermes-migration-checklist.md  hermes-parity-comparison.md  hermes-parity-roadmap.md  nginx-trading-operation.conf  web-platform.md
docs/: README.md
rules/: api-routing.md  attitude-mapping.md  report-format.md
scripts/: _check_geegoo_path.py  _check_github_creds.py  _finish_install.py  _fix_geegoo_path.py  _patch_api_key_remote.py  _probe_remote.py  _readme_install_remote.py  _reinstall_geegoo_remote.py  _server_fix_remote.py  _server_pull.py  _server_update.py  audit_geegoo_3xxx_endpoints.py  banner_design.go  check_agent_config.py  check_agent_llm_remote.py  check_cn_firewall.py  check_cross_server.py  check_import_boundaries.go  cleanup_5900_docs.py  demo_tencent_quote.py  deploy_agent_server.py  deploy_go_agent.py  deploy_remaining_tools.py  deploy_verify_capital_routing.py  diag_user_id.py  diagnose_runtime_network.py  ensure-go.sh  fix_data_url_remote.py  fix_llm_key.py  fix_test_patches.py  inspect_service_api.py  install-go.sh  install.sh  mcp_migration_audit.py  migrate_agent_config_3xxx.py  nc_test.py  patch_agent_geegoo_config.py  probe_batch_translation.py  probe_capital_markets.py  probe_futu_host.py  (+47 more)
sql/: postgres_memory.sql  postgres_platform.sql  postgres_sessions.sql
tests/: __init__.py  conftest.py
(+635 files in other folders)
