[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geegoo-agent"
version = "0.1.0"
description = "Stock analysis self-hosted agent platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "prompt_toolkit>=3.0",
    "rich>=13.7",
    "openai>=1.50",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "tenacity>=8.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.scripts]
geegoo = "geegoo_agent.cli:main"
geegoo-agent = "geegoo_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/geegoo_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "e2e: end-to-end tests",
    "slow: slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["geegoo_agent"]
ignore_missing_imports = true
